<resources>
    <string name="app_name">myFlights</string>
    <string name="app_name_big_flights">myFLIGHTS</string>
    <string name="app_name_my">my</string>
    <string name="app_name_flights">flights</string>


    <!--LoginFragment-->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="empty_email">Email can\'t be empty</string>
    <string name="empty_password">Password can\'t be empty</string>
    <string name="no_user_error">No user</string>
    <string name="not_email_error">It is not an email</string>
    <string name="wrong_password_error">Wrong password</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="confirm_password">Type password again</string>
    <string name="create_account">Create account</string>
    <string name="dont_have_account">Don\'t you have an account yet?</string>
    <string name="register_now">Register now</string>
    <string name="password_not_maches">Password doesn\'t match</string>
    <string name="email_resend_info">The verification message was sent on your email. If you didn\'t receive message clinck "Send Again"</string>
    <string name="resend">Resend</string>
    <string name="confirmed_go_to_login">Confirmed go to login</string>
    <string name="to_weak_password">Ad least 6 characters</string>
    <string name="user_exists">User already exists</string>
    <string name="email_resended">The message have been sent</string>
    <string name="flights">Flights</string>

    <!--CreateAccountFragment-->
    <string name="accept">I accept</string>
    <string name="regulations">the regulations</string>


    <!--AirplanesFragment-->
    <string name="airplanes">Airplanes</string>
    <string name="no_airplanes_info">You have no airplanes.\nClick add button to add new airplane.</string>
    <string name="airplane_delete_question">Are you sure to delete this airplane?</string>
    <string name="airplane_deleted">Airplane has been deleted.</string>

    <!--AirportsFragment-->
    <string name="airports">Airports</string>
    <string name="no_airports_info">You have no airports.\nClick add button to add new airport.</string>
    <string name="airport_delete_question">Are you sure to delete this airport?</string>
    <string name="airport_deleted">Airport has been deleted.</string>
    <string name="runways">Runways</string>

    <!--AirportDetailsFragment-->
    <string name="no_ils">No ILS</string>

    <!--AirportSelectFragment-->
    <string name="search_airport">Name or ICAO</string>
    <string name="no_airports_found">No airports found</string>

    <!--RunwayDetailsFragment-->
    <string name="runway_deleted">Runway has been deleted.</string>
    <string name="runway_delete_question_info">Are you sure to delete this runway? The operation is irreversible.</string>


    <!--RunwayAddFragment-->
    <string name="runway_name">Runway name</string>
    <string name="runway_length">Runway length</string>
    <string name="runway_heading">Runway heading</string>
    <string name="runway_ils_frequency">Runway ILS frequency</string>
    <string name="add_runway">Add runway</string>

    <!--RunwayEditFragment-->
    <string name="save_runway">Save runway</string>

    <!--RunwaySelectFragment-->
    <string name="select_runway">Select runway</string>
    <string name="no_runways">No runways has been created</string>


    <!--AirplaneDetailsFragment-->
    <string name="airport_delete_question_info">Are you sure to delete this airport? The operation is irreversible.</string>

    <!--AirplaneAddFragment-->
    <string name="airplane_name">Airplane name</string>
    <string name="airplane_max_speed">Max speed</string>
    <string name="airplane_weight">Weight</string>

    <!--AirplaneDetailsFragment-->
    <string name="airplane_delete_question_info">Are you sure to delete this airplane? The operation is irreversible.</string>

    <!--AirplaneSelectFragment-->
    <string name="search_airplane">Airplane name</string>
    <string name="no_airplanes_found">No airplanes found</string>

    <!--FlightsFragment-->
    <string name="no_flights_info">You have no flights.\nClick add button to add new flight.</string>

    <!--FlightDetailsFragment-->
    <string name="flight_deleted">Flight has been deleted.</string>
    <string name="flight_delete_question_info">Are you sure to delete this flight? The operation is irreversible.</string>
    <string name="flight_resign_question_info">Are you sure to resign from this shared flight? The operation is irreversible.</string>
    <string name="flight_details_see_all">See all</string>
    <string name="flight_details_owner">Owner</string>
    <string name="flight_details_invited_users">Invited users</string>

    <!--FlightAddFragment-->
    <string name="departure_airport">Departure airport</string>
    <string name="departure_runway">Departure runway</string>
    <string name="arrival_airport">Arrival airport</string>
    <string name="arrival_runway">Arrival runway</string>
    <string name="flight_distance">Flight distance</string>
    <string name="departure_time">Departure time (Z)</string>
    <string name="arrival_time">Arrival time (Z)</string>
    <string name="note">Note</string>
    <string name="add_flight">Add flight</string>

    <!--Profile-->
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="no_nick">No nick</string>

    <!--ChangeAvatarBottomSheet-->
    <string name="take_photo">Take photo</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="delete_avatar">Delete avatar</string>

    <!--Settings-->
    <string name="change_nick">Change nick</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="change_avatar">Change avatar</string>
    <string name="about_app">About App</string>
    <string name="delete_account">Delete account</string>

    <!--ChangeNick-->
    <string name="nick_changed">Your nick has been successfully changed</string>

    <!--ChangeEmail-->
    <string name="new_email">New email</string>
    <string name="confirm_new_email">Confirm new email</string>

    <!--ChangePassword-->
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_changed">Your password has been successfully changed</string>

    <!--AboutApp-->
    <string name="build_version">Build version</string>
    <string name="build_date">Build date</string>

    <!--DeleteAccount-->
    <string name="delete_account_question">Are you sure to delete account? The operation is irreversible and you will lose all your data.</string>

    <!--Statistics-->
    <string name="flight_hours">Flight hours</string>
    <string name="favourite_airplane">Favourite airplane</string>
    <string name="favourite_departure_airport">Favourite departure airport</string>
    <string name="favourite_arrival_airport">Favourite arrival airport</string>
    <string name="top_airplanes">Top airplanes</string>
    <string name="top_departures">Top departures</string>
    <string name="top_arrivals">Top arrivals</string>

    <!--ShareFlight-->
    <string name="share_flight_share_flight">Share Flight</string>
    <string name="share_flight_instruction">Share this QR code with your friends to enable them joining your flight:)</string>
    <string name="share_flight_dynamic_link_format">https://myflightsdev.page.link/?link=%1$s&amp;apn=pl.kossa.myflights</string>
    <string name="share_flight_uri_format">https://myflights.kossa.pl/join?sharedFlightId=%1$s</string>
    <string name="share_flight_time_format">%1$02d:%2$02d</string>
    <string name="share_flight_code_expired">Code expired</string>
    <string name="share_flight_send_invitation_link">Send invitation link</string>
    <string name="share_flight_invitation_link_format">Hi! I want to invite you to my flight. Click the link below to join:\n%1$s</string>
    <string name="share_flight_invitation_link_title">Join My Flight</string>

    <!--ScanQRCode-->
    <string name="scan_qr_code_error">Error by processing image</string>

    <!--PendingSharedFlights-->
    <string name="pending_shared_flights_awaiting_owner_acceptation">Awaiting owner\'s acceptation</string>

    <!--PendingSharedFlightDetails-->
    <string name="pending_shared_flight_confirmed">Shared flight confirmed</string>

    <!--JoinFlight-->
    <string name="join_flight_question">Do you want to join this flight?</string>
    <string name="join_flight_route">Route</string>

    <!--JoinRequestSent-->
    <string name="join_request_sent_title">Join request sent</string>
    <string name="join_request_sent_info">Your join request has been sent. Now it\'s waiting for owner confirmation.</string>


    <!--Common-->
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="change">Change</string>
    <string name="select">Select</string>
    <string name="airport">Airport</string>
    <string name="airplane">Airplane</string>
    <string name="runway">Runway</string>
    <string name="flight">Flight</string>
    <string name="nick">Nick</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="decline">Decline</string>
    <string name="confirm">Confirm</string>
    <string name="resign">Resign</string>
    <string name="route_format">%1$s-%2$s</string>

    <!--Errors-->
    <string name="error_empty_name">Name can\'t be empty.</string>
    <string name="error_departure_in_future">Departure can\'t be in future.</string>
    <string name="error_departure_after_arrival">Departure can\'t be after arrival.</string>
    <string name="error_arrival_in_future">Arrival can\'t be in future.</string>
    <string name="error_arrival_before_departure">Arrival can\'t be before departure.</string>

    <string name="error_airplane_not_found">Airplane not found.</string>
    <string name="error_airport_not_found">Airport not found.</string>
    <string name="error_runway_not_found">Runway not found.</string>
    <string name="error_flight_not_found">Flight not found.</string>

    <string name="error_airplane_exists_in_flights">Airplane can\'t be deleted. It exists in flights.</string>
    <string name="error_airport_exists_in_flights">Airport can\'t be deleted. It exists in flights.</string>
    <string name="error_runway_exists_in_flights">Runway can\'t be deleted. It exists in flights.</string>
    <string name="error_forbidden">Forbidden.</string>
    <string name="error_no_internet">No internet.</string>
    <string name="error_no_connection_to_server">No connection to server.</string>
    <string name="error_sign_in_with_google">Error by sign in with Google</string>


    <string name="airport_city">City</string>
    <string name="airport_icao_code">ICAO</string>
    <string name="airport_groundFrequency">Ground Frequency</string>
    <string name="airport_towerFrequency">Tower Frequency</string>
    <string name="airport_save">Save Airport</string>
    <string name="airport_name">Airport name</string>
    <string name="add_airplane">Add Airplane</string>
    <string name="firebase_messaging_channel_id">FIREBASE_MESSAGING_CHANNEL</string>

    <string name="double_places_float_format" translatable="false">%.02f</string>
    <string name="dynamic_link_prefix">https://myflightsdev.page.link/</string>

</resources>
