<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <pl.kossa.myflights.views.BackAppBar
        android:id="@+id/backAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:deleteVisible="false"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/black_day_night"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backAppbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeNickButton"
        style="@style/BlackOutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/change_nick"
        app:layout_constraintBottom_toTopOf="@id/changeEmailButton"
        app:layout_constraintTop_toBottomOf="@id/settingsTv"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeEmailButton"
        style="@style/BlackOutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/change_email"
        app:layout_constraintBottom_toTopOf="@id/changePasswordButton"
        app:layout_constraintTop_toBottomOf="@id/changeNickButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePasswordButton"
        style="@style/BlackOutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/change_password"
        app:layout_constraintBottom_toTopOf="@id/aboutAppButton"
        app:layout_constraintTop_toBottomOf="@id/changeEmailButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/aboutAppButton"
        style="@style/BlackOutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/about_app"
        app:layout_constraintBottom_toTopOf="@id/deleteAccountButton"
        app:layout_constraintTop_toBottomOf="@id/changePasswordButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteAccountButton"
        style="@style/RedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/delete_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutAppButton" />

</androidx.constraintlayout.widget.ConstraintLayout>