<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <pl.kossa.myflights.views.DetailsAppBar
        android:id="@+id/detailsAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/airplane" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/airplaneSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <pl.kossa.myflights.views.ElementWithTagView
                android:id="@+id/nameEwt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:tagText="@string/airplane_name" />

            <pl.kossa.myflights.views.ElementWithTagView
                android:id="@+id/maxSpeedEtw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/nameEwt"
                app:tagText="@string/airplane_max_speed" />

            <pl.kossa.myflights.views.ElementWithTagView
                android:id="@+id/weightEwt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/maxSpeedEtw"
                app:tagText="@string/airplane_weight" />

            <!--TODO image-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>